List User et Contact OK RAF resource

--- a/src/locale/resource.json
+++ b/src/locale/resource.json
@@ -228,8 +228,10 @@
     "details": "Détails",
     "delete_confirm_m": "Êtes-vous sûr de vouloir supprimer le {0}: {1}?",
     "delete_confirm_f": "Êtes-vous sûr de vouloir supprimer la {0}: {1}?",
+    "delete_confirm_mf": "Êtes-vous sûr de vouloir supprimer l'{0}: {1}?",
     "delete_success_m": "Le {0} {1} supprimé avec succès",
     "delete_success_f": "La {0} {1} supprimée avec succès",
+    "delete_success_mf": "L'{0} {1} supprimé(e) avec succès",
     "delete_cancelled": "Suppression annulée",
     "delete_error": "Erreur lors de la suppression de {0}",
     "save_success": "{0} enregistré avec succès",
