Mise en place des resource sur les formulaires

--- a/src/locale/resource.json
+++ b/src/locale/resource.json
@@ -24,6 +24,9 @@
   },
   "router": {
     "base": "/",
+    "new": "new",
+    "edit": "edit",
+    "view": "view",
     "routes": {
       "home": "/",
       "welcome": "welcome",
@@ -34,6 +37,7 @@
       "profile": "profil",
       "admin": "#",
       "products": "products",
+      "product_list": "product-list",
       "tags": "tags",
       "perlertypes": "perler-types",
       "contacts": "contacts",
@@ -171,17 +175,25 @@
     "send_message_success": "Votre message a bien été envoyé!"
   },
   "form": {
-    "name": "Nom",
     "email": "Email",
     "subject": "Objet",
     "message": "Message",
     "password": "Mot de passe",
     "confirm_password": "Confirmer le mot de passe",
-    "pseudo": "Pseudo",
-    "prompt_password": "Saisir un mot de passe"
+    "prompt_password": "Saisir un mot de passe",
+    "display_name": "Pseudo",
+    "surname":"Nom",
+    "name": "Prénom",
+    "address": "Adresse",
+    "postal_code": "Code Postal",
+    "city": "Ville",
+    "code": "Code",
+    "libelle": "Libellé",
+    "drag_drop": "Glissez-déposez ou cliquez pour ajouter des fichiers",
+    "reference": "Référence",
+    "color": "Couleur"
   },
   "error": {
-    "name_mandatory": "Le nom est obligatoire",
     "email_mandatory": "L'email est obligatoire",
     "email_invalid": "L'email n'est pas valide",
     "subject_mandatory": "L'objet est obligatoire",
@@ -191,10 +203,21 @@
     "password_minlength": "Le mot de passe doit contenir au moins 8 caractères",
     "confirm_password_mandatory": "La confirmation du mot de passe est obligatoire",
     "confirm_password_required": "La confirmation du mot de passe est requise",
-    "pseudo_mandatory": "Le pseudo est obligatoire",
-    "pseudo_invalid": "Le pseudo n'est pas valide",
-    "pseudo_required": "Le pseudo est requis",
-    "pseudo_already_exists": "Le pseudo existe déjà, veuillez en choisir un autre",
+    "display_name_mandatory": "Le pseudo est obligatoire",
+    "display_name_invalid": "Le pseudo n'est pas valide",
+    "display_name_required": "Le pseudo est requis",
+    "display_name_already_exists": "Le pseudo existe déjà, veuillez en choisir un autre",
+    "surname_mandatory": "Le nom est obligatoire",
+    "name_mandatory": "Le prénom est obligatoire",
+    "address_mandatory": "L'adresse est obligatoire",
+    "postal_code_mandatory": "Le code postal est obligatoire",
+    "city_mandatory": "La ville est obligatoire",
+    "code_mandatory": "Le code est obligatoire",
+    "code_unique": "Le code doit être unique",
+    "libelle_mandatory": "Le libellé est obligatoire",
+    "reference_mandatory": "La référence est obligatoire",
+    "reference_unique": "La référence doit être unique",
+    "color_mandatory": "La couleur est obligatoire",
     "default": "Une erreur est survenue, veuillez réessayer plus tard",
     "unauthorized": "Vous n'êtes pas autorisé à accéder à cette page",
     "forbidden": "Accès interdit",
@@ -226,6 +249,14 @@
     "cancel": "Annulé",
     "attention": "Attention!",
     "details": "Détails",
+    "success": "Succès",
+    "error": "Erreur",
+    "create_success_m": "Le {0} {1} a été créé avec succès",
+    "create_success_f": "La {0} {1} a été créée avec succès",
+    "create_success_mf": "L'{0} {1} a été créé(e) avec succès",
+    "edit_success_m": "Le {0} {1} a été modifié avec succès",
+    "edit_success_f": "La {0} {1} a été modifiée avec succès",
+    "edit_success_mf": "L'{0} {1} a été modifié(e) avec succès",
     "delete_confirm_m": "Êtes-vous sûr de vouloir supprimer le {0}: {1}?",
     "delete_confirm_f": "Êtes-vous sûr de vouloir supprimer la {0}: {1}?",
     "delete_confirm_mf": "Êtes-vous sûr de vouloir supprimer l'{0}: {1}?",
@@ -309,6 +340,12 @@
     "identity": "Identité",
     "email": "Email",
     "subject": "Sujet",
-    "message": "Message"
+    "message": "Message",
+    "display_name": "Pseudo",
+    "surname":"Nom",
+    "name": "Prénom",
+    "admin": "Admin",
+    "account": "Compte"
+
   }
 }
